// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Text /> should render a non-inline text element 1`] = `
.c0 {
  font-family: 'Open Sans',Arial,sans-serif;
  color: undefined;
  font-weight: 400;
  display: block;
  font-size: 1rem;
}

<class_1
  inline={false}
>
  <Skeleton
    className=""
    inline={false}
    skeletonOptions={
      Object {
        "shape": "line",
        "showSkeleton": false,
        "size": "large",
      }
    }
  >
    <TextComponent
      inline={false}
      size="medium"
      weight="normal"
    >
      <styled.span
        inline={false}
        size="medium"
        weight="normal"
      >
        <span
          className="c0"
          size="medium"
        >
          Hello, world!
        </span>
      </styled.span>
    </TextComponent>
  </Skeleton>
</class_1>
`;

exports[`<Text /> should render a skeleton element if skeletonOptions are passed to the component 1`] = `
<class_1
  skeletonOptions={
    Object {
      "shape": "line",
      "showSkeleton": true,
    }
  }
>
  <Skeleton
    className=""
    skeletonOptions={
      Object {
        "shape": "line",
        "showSkeleton": true,
      }
    }
  >
    <span
      className="Skeleton skeleton line skeleton-large"
      style={
        Object {
          "width": undefined,
        }
      }
    >
      ‌
    </span>
  </Skeleton>
</class_1>
`;

exports[`<Text /> should render an element with heavy text 1`] = `
.c0 {
  font-family: 'Open Sans',Arial,sans-serif;
  color: undefined;
  font-weight: 600;
  font-size: 1rem;
}

<class_1
  weight="heavy"
>
  <Skeleton
    className=""
    skeletonOptions={
      Object {
        "shape": "line",
        "showSkeleton": false,
        "size": "large",
      }
    }
    weight="heavy"
  >
    <TextComponent
      inline={true}
      size="medium"
      weight="heavy"
    >
      <styled.span
        inline={true}
        size="medium"
        weight="heavy"
      >
        <span
          className="c0"
          size="medium"
        >
          Hello, world!
        </span>
      </styled.span>
    </TextComponent>
  </Skeleton>
</class_1>
`;

exports[`<Text /> should render an element with large text 1`] = `
.c0 {
  font-family: 'Open Sans',Arial,sans-serif;
  color: undefined;
  font-weight: 400;
  font-size: 1.125rem;
}

<class_1
  size="large"
>
  <Skeleton
    className=""
    size="large"
    skeletonOptions={
      Object {
        "shape": "line",
        "showSkeleton": false,
        "size": "large",
      }
    }
  >
    <TextComponent
      inline={true}
      size="large"
      weight="normal"
    >
      <styled.span
        inline={true}
        size="large"
        weight="normal"
      >
        <span
          className="c0"
          size="large"
        >
          Hello, world!
        </span>
      </styled.span>
    </TextComponent>
  </Skeleton>
</class_1>
`;

exports[`<Text /> should render an element with small text 1`] = `
.c0 {
  font-family: 'Open Sans',Arial,sans-serif;
  color: undefined;
  font-weight: 400;
  font-size: .8125rem;
}

<class_1
  size="small"
>
  <Skeleton
    className=""
    size="small"
    skeletonOptions={
      Object {
        "shape": "line",
        "showSkeleton": false,
        "size": "large",
      }
    }
  >
    <TextComponent
      inline={true}
      size="small"
      weight="normal"
    >
      <styled.span
        inline={true}
        size="small"
        weight="normal"
      >
        <span
          className="c0"
          size="small"
        >
          Hello, world!
        </span>
      </styled.span>
    </TextComponent>
  </Skeleton>
</class_1>
`;

exports[`<Text /> should render an element with subtle text 1`] = `
.c0 {
  font-family: 'Open Sans',Arial,sans-serif;
  color: undefined;
  font-weight: 400;
  font-size: 1rem;
}

<class_1
  subtle={true}
>
  <Skeleton
    className=""
    skeletonOptions={
      Object {
        "shape": "line",
        "showSkeleton": false,
        "size": "large",
      }
    }
    subtle={true}
  >
    <TextComponent
      inline={true}
      size="medium"
      subtle={true}
      weight="normal"
    >
      <styled.span
        inline={true}
        size="medium"
        weight="normal"
      >
        <span
          className="c0"
          size="medium"
        >
          Hello, world!
        </span>
      </styled.span>
    </TextComponent>
  </Skeleton>
</class_1>
`;

exports[`<Text /> should render an element with text 1`] = `
.c0 {
  font-family: 'Open Sans',Arial,sans-serif;
  color: undefined;
  font-weight: 400;
  font-size: 1rem;
}

<class_1>
  <Skeleton
    className=""
    skeletonOptions={
      Object {
        "shape": "line",
        "showSkeleton": false,
        "size": "large",
      }
    }
  >
    <TextComponent
      inline={true}
      size="medium"
      weight="normal"
    >
      <styled.span
        inline={true}
        size="medium"
        weight="normal"
      >
        <span
          className="c0"
          size="medium"
        >
          Hello, world!
        </span>
      </styled.span>
    </TextComponent>
  </Skeleton>
</class_1>
`;

exports[`<Text /> should render an element with the text converted to uppercase 1`] = `
.c0 {
  font-family: 'Open Sans',Arial,sans-serif;
  color: undefined;
  font-weight: 400;
  text-transform: uppercase;
  font-size: 1rem;
}

<class_1
  upper={true}
>
  <Skeleton
    className=""
    skeletonOptions={
      Object {
        "shape": "line",
        "showSkeleton": false,
        "size": "large",
      }
    }
    upper={true}
  >
    <TextComponent
      inline={true}
      size="medium"
      upper={true}
      weight="normal"
    >
      <styled.span
        inline={true}
        size="medium"
        upper={true}
        weight="normal"
      >
        <span
          className="c0"
          size="medium"
        >
          Hello, world!
        </span>
      </styled.span>
    </TextComponent>
  </Skeleton>
</class_1>
`;
